# zb-bin-devel

./: Cargo.toml  README.md  install.sh  zbconfig
.github/workflows/: build.yml  lint.yml  release.yml
src/: installer_cli.rs  main.rs  system.rs  terminal.rs  zbcli.rs
src/toolchain/: install.rs  mod.rs  version.rs
