cargo-features = ["edition2024"]

[package]
name = "zb-installer"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.18"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
fs_extra = "1.3.0"
glob = "0.3.1"
octocrab = "0.39.0"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }
lexopt = "0.3.0"
log = "0.4.22"

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
