[package]
name = "zb-installer"
version = "0.1.9"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
derive_more = "0.99.18"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
glob = "0.3.1"
octocrab = "0.43.0"
reqwest = "0.12.5"
tokio = { version = "1.38.0", features = ["full"] }
openssl = { version = "0.10", features = ["vendored"] }  # needed for cross build
urlencoding = "2.1.3"

[features]
default = []
zbcli-devel = []

[profile.release]
strip = true
opt-level = "s"
lto = true
panic = "abort"
codegen-units = 1
